--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,8 +26,8 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: golangci-lint ${{ matrix.working-directory }}
-      uses: golangci/golangci-lint-action@v3
+      uses: golangci/golangci-lint-action@v3.7.0
       with:
-        version: latest
+        version: v1.54.2
         working-directory: ${{ matrix.working-directory}}
         args: --verbose
