--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
   schedule:
     interval: weekly
 - package-ecosystem: gomod
-  directory: update-urls
+  directory: tools
   schedule:
     interval: weekly
 - package-ecosystem: github-actions
