--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,6 +78,7 @@ jobs:
       uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d #v3.1.4
 
     - name: Run go test for tools
+      if: ${{ matrix.update-coverage }}
       run: cd tools && go test -v -race ./...
 
     - name: Validate metadata.yaml
