--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,6 +58,7 @@ jobs:
         restore-keys: ${{ runner.os }}-go-
 
     - name: Ensure go generate produces a zero diff
+      if: ${{ matrix.update-coverage }}
       shell: bash
       run: go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; (exit $code)
 
