--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8571,7 +8571,7 @@ operations:
       - descriptions/ghec/ghec.json
       - descriptions/ghes-3.10/ghes-3.10.json
     go_methods:
-      - RepositoriesService.GetLatestRelease
+      - RepositoriesService.UploadReleaseAsset
   - openapi:
       method: GET
       endpoint_url: /repos/{owner}/{repo}/releases/{release_id}/reactions
