--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,6 +23,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-go@v4
+      with:
+        go-version: 1.x
 
     - name: golangci-lint ${{ matrix.working-directory }}
       uses: golangci/golangci-lint-action@v3
