--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
           ${{ steps.cache-paths.outputs.go-cache }}
           ${{ steps.cache-paths.outputs.go-mod-cache }}
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: ${{ runner.os }}-go-
+        restore-keys: ${{ runner.os }}-go2-
 
     - name: Ensure go generate produces a zero diff
       shell: bash
