--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,27 +21,22 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-    - uses: actions/setup-go@v4
+    - uses: WillAbides/setup-go-faster@v1
+      id: setup-go
       with:
         go-version: ${{ matrix.go-version }}
     - uses: actions/checkout@v4
 
-    # Get values for cache paths to be used in later steps 
-    - id: cache-paths
-      run: |
-        echo "go-cache=$(go env GOCACHE)" >> $GITHUB_OUTPUT
-        echo "go-mod-cache=$(go env GOMODCACHE)" >> $GITHUB_OUTPUT
-      shell: bash
-
-    - name: Cache go modules
-      uses: actions/cache@v3
+    - uses: actions/cache@v3
       with:
         path: |
-          ${{ steps.cache-paths.outputs.go-cache }}
-          ${{ steps.cache-paths.outputs.go-mod-cache }}
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: ${{ runner.os }}-go2-
+          ${{ steps.setup-go.outputs.GOCACHE }}
+          ${{ steps.setup-go.outputs.GOMODCACHE }}
+        key: ${{ runner.os }}-go-debug-
 
-    - name: Ensure go generate produces a zero diff
-      shell: bash
-      run: go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; (exit $code)
+    - name: build metadata
+      run: go -C tools build -o "/tmp/metadata" ./cmd/metadata
+
+#    - name: Ensure go generate produces a zero diff
+#      shell: bash
+#      run: go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; (exit $code)
