--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
       run: go -C tools build -o "/tmp/metadata" ./cmd/metadata
 
     - name: update-urls
-      run: /tmp/metadata -update-urls
+      run: /tmp/metadata --update-urls
 
 #    - name: Ensure go generate produces a zero diff
 #      shell: bash
