--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
       - name: git diff
         run: |
           git -c user.name='bot' -c user.email='bot@localhost' commit -am 'tmp commit' --allow-empty
-          git diff HEAD^
+          git diff HEAD^ --exit-code
           git reset HEAD^
 
 #      - name: git diff
