--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.x ]
-        platform: [ ubuntu-latest, windows-latest ]
+        platform: [ windows-latest ]
     runs-on: ${{ matrix.platform }}
 
     steps:
