--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         go-version: [ 1.x ]
         platform: [ ubuntu-latest, windows-latest ]
+      fail-fast: false
     runs-on: ${{ matrix.platform }}
 
     steps:
