--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
           key: ${{ runner.os }}-go-debug2
 
       - run: 'go -C tools build -o "${{ runner.temp }}"/metadata ./cmd/metadata'
-      - run: '"${{ runner.temp }}"/metadata update-urls'
+#      - run: '"${{ runner.temp }}"/metadata update-urls'
 
       - name: diff-check
         run: |
