--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,4 +13,5 @@ jobs:
       with:
         go-version: 1.x
         cache-dependency-path: "**/go.sum"
+    - run: sudo apt-get install -y libsodium-dev
     - run: scripts/lint
