--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,17 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - uses: actions/checkout@v4
 
+    - name: Install libsodium
+      if: matrix.platform == 'ubuntu-latest'
+      run: sudo apt-get install -y libsodium-dev
+      shell: bash
+
+    - name: Install libsodium on Windows
+      if: matrix.platform == 'windows-latest'
+      run: |
+        choco install libsodium
+      shell: powershell
+
     # Get values for cache paths to be used in later steps
     - id: cache-paths
       run: |
