--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ permissions:
 
 jobs:
   test:
+    defaults:
+      run:
+        shell: bash
     strategy:
       matrix:
         go-version: [1.x, 1.20.x]
@@ -37,12 +40,12 @@ jobs:
 
     steps:
     - uses: actions/setup-go@v4
+      id: setup-go
       with:
         go-version: ${{ matrix.go-version }}
     - uses: actions/checkout@v4
 
     - name: Install libsodium
-      shell: bash
       run: |
         if [ "${{ runner.os }}" = "Linux" ]; then
           sudo apt-get install -y libsodium-dev
@@ -56,7 +59,7 @@ jobs:
       run: |
         echo "go-cache=$(go env GOCACHE)" >> $GITHUB_OUTPUT
         echo "go-mod-cache=$(go env GOMODCACHE)" >> $GITHUB_OUTPUT
-      shell: bash
+        echo "cache-prefix=${{ runner.os }}-go-${{ steps.setup-go.outputs.go-version }}-" >> $GITHUB_OUTPUT
 
     - name: Cache go modules
       uses: actions/cache@v3
@@ -64,8 +67,10 @@ jobs:
         path: |
           ${{ steps.cache-paths.outputs.go-cache }}
           ${{ steps.cache-paths.outputs.go-mod-cache }}
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: ${{ runner.os }}-go-
+        key: ${{ steps.cache-paths.outputs.cache-prefix }}${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        restore-keys: |
+          ${{ steps.cache-paths.outputs.cache-prefix }}${{ hashFiles('**/go.sum') }}-
+          ${{ steps.cache-paths.outputs.cache-prefix }}
 
     - name: Run go test
       run: scripts/test -race -covermode atomic -coverprofile coverage.txt ./...
