--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Run go test
       run: |
-        if [ -n "${{ matrix.update-coverage }} ; then
+        if [ -n "${{ matrix.update-coverage }}" ]; then
           scripts/test -race -covermode atomic -coverprofile coverage.txt ./...
           exit
         fi
