--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,5 +3,5 @@ ignore:
   - "github/github-accessors.go"
   # ignore experimental scrape package
   - "scrape"
-  # ignore update-urls
-  - "update-urls"
+  # ignore tools
+  - "tools"
