--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2709,6 +2709,7 @@ operation_overrides:
     documentation_url: https://docs.github.com/rest/pages/pages#request-a-github-pages-build
   - name: GET /repos/{owner}/{repo}/pages/builds/{build_id}
     documentation_url: https://docs.github.com/rest/pages/pages#get-github-pages-build
+openapi_commit: b8dafbe912a3be421d21346faa2b29bf15e6f84d
 openapi_operations:
   - name: GET /
     documentation_url: https://docs.github.com/rest/meta/meta#github-api-root
