--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -14,3 +14,6 @@ jobs:
         go-version: 1.x
         cache-dependency-path: "**/go.sum"
     - run: script/lint.sh
+      env:
+        CHECK_GITHUB_OPENAPI: 1
+        GITHUB_TOKEN: ${{ github.token }}
