--- a/tools/cmd/metadata/testdata/validate_valid/metadata.yaml
+++ b/tools/cmd/metadata/testdata/validate_valid/metadata.yaml
@@ -11,14 +11,18 @@ methods:
   - name: AService.AcceptableLinks
     operations:
       - POST /a/{a_id}
-      - GET /a/{a_id_bar}
+      - GET /a/{a_id}
   - name: AService.Uncommented
     operations:
       - GET /a/{a_id}
 openapi_commit: b8dafbe912a3be421d21346faa2b29bf15e6f84d
-openapi_operations:
+operations:
   - name: POST /a/{a_id}
     documentation_url: https://docs.github.com/rest/a/a#update-a
+openapi_operations:
   - name: GET /a/{a_id}
     documentation_url: https://docs.github.com/rest/a/a#get-a
   - name: GET /undocumented/{undocumented_id}
+operation_overrides:
+  - name: GET /a/{a_id}
+    documentation_url: https://docs.github.com/rest/a/a#overridden-get-a
